tests/ui/parser/mismatched-delimiter-corner-case-issue-127868.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/mismatched-delimiter-corner-case-issue-127868.rs:4:42
   |
LL | fn main() {
   |           - closing delimiter possibly meant for this
LL |     let a = [[[[[[[[[[[[[[[[[[[[1, {, (, [,;
   |                                          ^ unclosed delimiter
LL | }
   | ^ mismatched closing delimiter

error: this file contains an unclosed delimiter
  --> $DIR/mismatched-delimiter-corner-case-issue-127868.rs:6:52
   |
LL | fn main() {
   |           - unclosed delimiter
LL |     let a = [[[[[[[[[[[[[[[[[[[[1, {, (, [,;
   |             ----- another 18 unclosed delimiters begin from here
   |             ||||
   |             |||unclosed delimiter
   |             ||unclosed delimiter
   |             |unclosed delimiter
   |             unclosed delimiter
LL | }
LL |
   |                                                   ^

error: aborting due to 2 previous errors

