tests/ui/parser/mismatched-delimiter-corner-case-issue-127868.rs
// issue: rust-lang/rust#127868

fn main() {
    let a = [[[[[[[[[[[[[[[[[[[[1, {, (, [,;
} //~ ERROR mismatched closing delimiter: `}`
//~ ERROR this file contains an unclosed delimiter
